# CGE

./: .gitignore  README.md  pyproject.toml  roadmap.md
.github/workflows/: ci.yml
docs/: documentation-standard.md  energy-and-temperature-plan.md  gui.md  overview.md  phase-0-status.md  phase-1-status.md  phase-2-status.md  phase-3-status.md  phase-4-status.md  phase-5-plan.md  phase-5d-plan.md  references.md  review-2026-07-remediation.md  user-guide.md  validation.md
docs/adr/: 0000-template.md  0001-canonical-data-format.md  0002-contracts-and-registry.md  0003-language-and-performance.md  README.md
docs/models/: _template.md  cge-static.md  data-layer.md  io-price-model.md  macro-aggregates.md  partial-equilibrium.md
examples/: carbon_price_cge.yaml  carbon_price_io.yaml  carbon_price_toy.yaml  carbon_price_volume.yaml  energy_price_io.yaml
scripts/: validate.py
src/cge/: __init__.py  accounting.py  cli.py  constants.py  runner.py
src/cge/contracts/: __init__.py  data_objects.py  engine.py  modules.py  provenance.py  quality.py  results.py  shocks.py
src/cge/data/: aggregate.py  build.py  metadata.py
src/cge/engines/: __init__.py  dummy.py
src/cge/gui/: __init__.py  app.py  results_view.py  service.py
tests/: test_accounting.py  test_capital.py  test_cge_multi.py  test_cge_open.py  test_cge_solver.py  test_cge_static.py  test_contracts.py  test_data_layer.py  test_end_to_end.py  test_energy_nest.py  test_exiobase_known_answer.py  test_gui_pages.py  test_gui_service.py  test_io_price.py  test_partial_eq.py  test_sam.py  test_validation.py
(+53 files in other folders)
