[project]
name = "cge"
version = "0.0.0"
description = "Open, modular CGE/IAM platform with a nature (ENCORE) extension"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Owen Matthews" }]
dependencies = [
    "pydantic>=2.6",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Heavier scientific / data deps land as the phases that need them arrive.
# Kept out of the core install so Phase 0 stays fast to set up.
data = ["pymrio>=0.5", "duckdb>=0.10", "pyarrow>=15"]
cge = ["pyomo>=6.7", "scipy>=1.12"]
# The GUI reads the data store and exports Parquet, so it needs the data deps too.
gui = ["streamlit>=1.33", "altair>=5", "pymrio>=0.5", "duckdb>=0.10", "pyarrow>=15"]
dev = ["pytest>=8", "ruff>=0.4", "pre-commit>=3.7"]

[project.scripts]
cge = "cge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cge"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
